# python-pgn-speaker

./: README.md  pyproject.toml
src/pgn_speaker/: cli.py  winsdk_helper.py
tests/: test_expand.py
