[project]
name = "pgn-speaker"
version = "1.0.0.post2"
description = "Reads moves one at a time from a PGN file for practicing chess visualzation skills."
authors = [{ name = "David Lechner", email = "david@lechnology.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "chess>=1.9.4",
    "windows-curses>=2.3.1 ; sys_platform == 'win32'",
    "winsdk>=1.0.0b7 ; sys_platform == 'win32'",
    "pyobjc-framework-avfoundation>=9.0.1 ; sys_platform == 'darwin'",
]

[project.urls]
Repository = "https://github.com/dlech/python-pgn-speaker"

[project.scripts]
pgn-speaker = "pgn_speaker.cli:main"

[dependency-groups]
lint = ["black>=22.12.0"]
test = ["pytest>=7.2.0"]

[tool.uv]
default-groups = [
    "lint",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
